--- a/pitscouting.html
+++ b/pitscouting.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+	<title>Pit Scouting</title>
 	<link rel='stylesheet' href="w3.css">
 	<link rel='stylesheet' href="w3-theme-red.css">
 	<link rel='stylesheet' href="style.css">
